--- a/AppWebSolution/AppWeb.Core/AppWeb.Core.csproj
+++ b/AppWebSolution/AppWeb.Core/AppWeb.Core.csproj
@@ -8,11 +8,15 @@
 
   <ItemGroup>
     <Folder Include="Domain\RepositoryContracts\" />
-    <Folder Include="DTO\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Helpers\" />
-    <Folder Include="Services\" />
-    <Folder Include="ServiceContracts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.10" />
   </ItemGroup>
 
 </Project>
